/*
 * Copyright 2016 Google Inc. All Rights Reserved.
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *  http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

syntax = "proto2";

package org.openyolo.demoprovider.barbican;

option java_package = "org.openyolo.demoprovider.barbican";
option java_outer_classname = "Protobufs";

message CredentialMeta {
  required int32 cost = 1;
  required bytes salt = 2;
  repeated string neverSave = 3;
  repeated AccountHint hints = 4;
}

message AccountHint {
  optional string identifier = 1; // required
  optional string authMethod = 2;
  optional string name = 3;
  optional string pictureUri = 4;
}