/*
 * Copyright 2016 Google Inc. All Rights Reserved.
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *  http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

syntax = "proto3";

package org.openyolo;

option java_package = "org.openyolo.protocol";
option java_outer_classname = "Protobufs";

message CredentialRetrieveRequest {
    ClientVersion clientVersion = 1;

    // at least one authMethod required
    repeated AuthenticationMethod authMethods = 2;

    map<string, TokenRequestInfo> supportedTokenProviders = 3;
    map<string, bytes> additionalProps = 4;
}

message CredentialRetrieveBbqResponse {
    bytes retrieveIntent = 1;
    map<string, bytes> additionalProps = 2;
}

message CredentialRetrieveBbqResponseList {
    repeated CredentialRetrieveBbqResponse responses = 1;
}

message CredentialRetrieveResult {
    enum ResultCode {
        UNSPECIFIED = 0;
        SUCCESS = 1;
        REJECTED_BY_PROVIDER = 2;
        REJECTED_BY_USER = 3;
    }

    // required
    ResultCode resultCode = 1;

    Credential credential = 2;
    map<string, bytes> additionalProps = 3;
}

message HintRetrieveRequest {
    ClientVersion clientVersion = 1;

    // at least one authMethod required
    repeated AuthenticationMethod authMethods = 2;

    PasswordSpecification passwordSpec = 3;
    map<string, TokenRequestInfo> supportedTokenProviders = 4;
    map<string, bytes> additionalProps = 5;
}

message HintRetrieveResult {
    enum ResultCode {
        UNSPECIFIED = 0;
        BAD_REQUEST = 1;
        HINT_SELECTED = 2;
        NO_HINTS_AVAILABLE = 3;
        USER_REQUESTS_MANUAL_AUTH = 4;
        USER_CANCELED = 5;
    }

    // required
    ResultCode resultCode = 1;

    Hint hint = 2;
    map<string, bytes> additionalProps = 3;
}

message Credential {
    // required
    string id = 1;

    // required
    AuthenticationDomain authDomain = 2;

    // required
    AuthenticationMethod authMethod = 3;

    string displayName = 4;
    string displayPictureUri = 5;
    string password = 6;
    string idToken = 7;
    map<string, bytes> additionalProps = 8;
}

message Hint {
    // required
    string id = 1;

    // required
    AuthenticationMethod authMethod = 2;

    string displayName = 3;
    string displayPictureUri = 4;
    string generatedPassword = 5;
    string idToken = 6;
    map<string, bytes> additionalProps = 7;
}

message AuthenticationMethod {
    // required
    string uri = 1;
}

message AuthenticationDomain {
    // required
    string uri = 1;
}

message PasswordSpecification {
    // required
    string allowed = 1;

    // required
    uint32 minSize = 2;

    // required
    uint32 maxSize = 3;

    repeated RequiredCharSet requiredSets = 4;
}

message RequiredCharSet {
    // required
    string chars = 1;

    // required
    uint32 count = 2;
}

message TokenRequestInfo {
    string clientId = 1;
    string nonce = 2;
    map<string, bytes> additionalProps = 3;
}

message ClientVersion {
    // required
    string vendor = 1;

    // required
    uint32 major = 2;

    // required
    uint32 minor = 3;

    // required
    uint32 patch = 4;
}